Nearly completely filled in, except for things involving DNS and the core Socket -> Handle conversion.

--- a/network-hans.cabal
+++ b/network-hans.cabal
@@ -22,7 +22,10 @@ source-repository head
 library
         hs-source-dirs:                 src
         extensions:                     DeriveDataTypeable,
-                                        GeneralizedNewtypeDeriving
+                                        ForeignFunctionInterface,
+                                        GeneralizedNewtypeDeriving,
+                                        RecordWildCards,
+                                        ScopedTypeVariables
         exposed-modules:
                                         Network.BSD,
                                         Network.Socket,
