Socket to Handle support.

--- a/network-hans.cabal
+++ b/network-hans.cabal
@@ -24,6 +24,7 @@ library
         extensions:                     DeriveDataTypeable,
                                         ForeignFunctionInterface,
                                         GeneralizedNewtypeDeriving,
+                                        MultiWayIf,
                                         RecordWildCards,
                                         ScopedTypeVariables
         exposed-modules:
